--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Anam's Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+
 </head>
 <body>
-    <div class="links">
-        <a href="https://github.com/yourusername" target="_blank">GitHub</a>
-        <a href="https://twitter.com/yourusername" target="_blank">Twitter</a>
-        <a href="mailto:your@email.com">Email</a>
-      </div>
+    <div class="row">
+        <div class="col-3">
+            <h1 style="margin: 10px 10px 10px 10px;color: #fff;font-size: 30px;">Shaikh <br>Anam</h1>
+            <h2 style=" color: #fff;
+        margin: 0px 0px 10px 10px;font-size: 20px;">Software <br>Engineer</h2>
+        <br>
+        <div class="links" >
+            <a href="index.html" >Home</a><br>
+            <a href="project.html">Projects</a><br>
+            <a href="contact.html">Contact</a>
+          </div>
+        </div>
+        <div class="col-6"></div>
+
+        <div class="col-3">
+            <div class="links2" style="margin-top: 200px; margin-left: 60%;">
+                <a href="https://www.linkedin.com/in/anam-shaikh-25247126b" style="text-decoration: none; color: #fff;
+                font-size: 30px;">LinkedIn</a><br>
+                <a href="https://github.com/anamsk663"style="text-decoration: none; color: #fff;
+                font-size: 30px;" >Github</a><br>
+                <a href="project.html" style="text-decoration: none; color: #fff;
+                font-size: 30px;">Email</a><br>
+                <a href="contact.html" style="text-decoration: none; color: #fff;
+                font-size: 30px;">Resume</a>
+              </div>
+        </div>
+    </div>
+
     
+
+
+
+
+
+
+    
+   
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 </body>
 </html>
